--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
+
 <html>
   <head>
   </head>
   <body>
     <div id="main">
     </div>
+    <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>  
+    <script src="/secrets.js"></script> 
     <script async defer src="/bundle.js"></script>    
   </body>
 </html>
