starting work on the tutorial

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,15 @@
   <body>
     <div id="main">
     </div>
-    <script async defer src="/bundle.js"></script>    
+    <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
+    <script async defer src="/bundle.js"></script>
+
+    <!-- Value -->
+    <pre id="object">
+
+    </pre>
+
+    <!-- Child -->
+
   </body>
 </html>
