--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 
 <html>
   <head>
+    <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
   </head>
   <body>
     <div id="main">
