playing with fire

--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,12 @@
   <body>
     <div id="main">
     </div>
-    <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
     <script async defer src="/bundle.js"></script>
 
     <!-- Value -->
-    <pre id="object">
+    <p id="object">
 
-    </pre>
+    </p>
 
     <!-- Child -->
 
