added buttons styling file and got rid of spacing

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,13 @@
 
 <html>
   <head>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="_buttons.scss">
   </head>
   <body>
     <div id="main">
-    </div> 
-    <script async defer src="/bundle.js"></script>    
+    </div>
+    <script async defer src="/bundle.js"></script>
 
     <!-- Value -->
     <p id="object">
