so many updates

--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,12 @@
 
 <html>
   <head>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="navbar.css">
   </head>
   <body>
     <div id="main">
-    </div> 
-    <script async defer src="/bundle.js"></script>    
-
-    <!-- Value -->
-    <p id="object">
-
-    </p>
-
-    <!-- Child -->
-
-
+    </div>
+    <script async defer src="/bundle.js"></script>
   </body>
 </html>
