--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,7 @@
 
 <html>
   <head>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <div id="main">
