added favicon and share links!!!!

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 
 <html>
   <head>
+    <link rel="shortcut icon" href="/assets/burnt_quill_favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div id="main">
